# rust-solver-poc

./: .gitignore  CLAUDE.md  Cargo.toml  gametree.json  gametree_v3.json  generate_tree.py  generator_config.json  preflop_ranges.html  preflop_ranges.json  range.html  solution_8max.json  solutions_example.json  solver.md  validate_tree.py  visualize.py  visualize_strategy.html
benches/: cfr_bench.rs
config/: hand_setup.json
configs/: hrc_8max_50bb.json  preflop_8max_50bb.json  sb_vs_bb_50bb_ante.json  sb_vs_bb_50bb_full.json
docs/: hrc_reference_settings.md
examples/: debug_kuhn.rs
src/: lib.rs
src/cfr/: config.rs  game.rs  mod.rs  solver.rs  storage.rs
src/games/: mod.rs
src/games/kuhn/: mod.rs
src/games/preflop/: abstraction.rs  action.rs  betting.rs  card.rs  config.rs  game.rs  hand.rs  hand_eval.rs  info_state.rs  mod.rs  output.rs  postflop_config.rs  state.rs
src/games/preflop_8max/: action.rs  equity.rs  game.rs  mod.rs  state.rs
src/games/preflop_ranges/: game.rs  mod.rs  output.rs  state.rs
