[package]
name = "rust-solver-poc"
version = "0.1.0"
edition = "2021"
description = "Generic CFR solver for game theory optimal strategies"
license = "MIT"

[dependencies]
# Random number generation
rand = "0.8"

# Parallel computation
rayon = "1.10"

# Fast hash maps
rustc-hash = "2.0"

# Serialization for checkpoints
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Progress tracking
indicatif = "0.17"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "cfr_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
